# ComfyUI_FileGallery

./: .gitignore  README.md  __init__.py  api.py  node.py  pyproject.toml  thumbnails.py
.github/workflows/: publish_node.yml
web/: index.js  styles.css
