[project]
name = "filegallery"
description = "A custom node for ComfyUI that allows you to easily browse and select images directly inside the node editor."
version = "1.0.0"
license = "MIT" 

[project.urls]
Repository = "https://github.com/JanisBe/ComfyUI_FileGallery"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/JanisBe/ComfyUI_FileGallery/wiki"
"Bug Tracker" = "https://github.com/JanisBe/ComfyUI_FileGallery/issues"

[tool.comfy]
PublisherId = "janisbe"
DisplayName = "ComfyUI_FileGallery"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

